force-app/main/default/objects/Data_Corruption_Object__mdt/Data_Corruption_Object__mdt.object-meta.xml
<CustomObject>
    <description>A custom metadata type to track sObjects and fields that should be corrupted by the Data Recovery Simulation code.</description>
    <label>Data Corruption Object</label>
    <pluralLabel>Data Corruption Objects</pluralLabel>
</CustomObject>