force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field determines whether an sObject will be corrupted on the next run.</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>