force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Corruption_Order__c.field-meta.xml
<CustomField>
    <fullName>Corruption_Order__c</fullName>
    <description>The order in which fields should be corrupted, with 1 being first, 2 being second, and so on.</description>
    <label>Corruption Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>