force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether to append &apos;__c&apos; to the end of an sObject label.</description>
    <label>Custom Object?</label>
    <type>Checkbox</type>
</CustomField>