force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Delete_Records__c.field-meta.xml
<CustomField>
    <fullName>Delete_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A property to determine if records should be corrupted via deletion.</description>
    <label>Delete Records</label>
    <type>Checkbox</type>
</CustomField>