force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Hard_Delete_Records__c.field-meta.xml
<CustomField>
    <fullName>Hard_Delete_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Optionally hard delete records for a given sObject.</description>
    <label>Hard Delete Records</label>
    <type>Checkbox</type>
</CustomField>