force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Modify_Records__c.field-meta.xml
<CustomField>
    <fullName>Modify_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A property to determine if records should be corrupted via field modification.</description>
    <label>Modify Records</label>
    <type>Checkbox</type>
</CustomField>