force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Number_Fields_To_Corrupt__c.field-meta.xml
<CustomField>
    <fullName>Number_Fields_To_Corrupt__c</fullName>
    <description>A semicolon separated list of Field API Names (including &apos;__c&apos; if necessary) that are to be corrupted by the Data Recovery Simulation code. These fields must be editable NUMBER fields.</description>
    <label>Number Field(s) To Corrupt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>