force-app/main/default/objects/Data_Corruption_Object__mdt/fields/Percent_To_Corrupt__c.field-meta.xml
<CustomField>
    <fullName>Percent_To_Corrupt__c</fullName>
    <description>The percentage of each sObject that should be corrupted.</description>
    <label>Percent To Corrupt</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>