force-app/main/default/objects/Data_Corruption_Object__mdt/validationRules/Verify_Active_Properties.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Active_Properties</fullName>
    <active>true</active>
    <description>If CMDT value is Active, ensure that either Delete, Modify, or Both are selected.</description>
    <errorConditionFormula>AND(Active__c, NOT(OR(Delete_Records__c, Modify_Records__c)))</errorConditionFormula>
    <errorMessage>To activate this record, please ensure Delete, Modify, or Both are checked.</errorMessage>
</ValidationRule>