force-app/main/default/objects/Data_Corruption_Object__mdt/validationRules/Verify_Delete_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Delete_Specified</fullName>
    <active>true</active>
    <description>Checks to ensure that if Hard Delete is selected, Delete is specified.</description>
    <errorConditionFormula>AND(
Hard_Delete_Records__c,
NOT(Delete_Records__c)
)</errorConditionFormula>
    <errorMessage>In order to corrupt via hard deletion, please specify Delete Records.</errorMessage>
</ValidationRule>