force-app/main/default/objects/Data_Corruption_Object__mdt/validationRules/Verify_Fields_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Fields_Specified</fullName>
    <active>true</active>
    <description>Checks to ensure that if Modify is selected, there are fields to corrupt specified.</description>
    <errorConditionFormula>AND(
Modify_Records__c,
AND(ISBLANK(Text_Fields_To_Corrupt__c), ISBLANK( Number_Fields_To_Corrupt__c ))
)</errorConditionFormula>
    <errorMessage>In order to corrupt via modification, please specify either Text or Number Fields to Corrupt.</errorMessage>
</ValidationRule>