force-app/main/default/objects/Data_Corruption_Object__mdt/listViews/Data_Corruption_Objects.listView-meta.xml
<ListView>
    <fullName>Data_Corruption_Objects</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>Custom_Object__c</columns>
    <columns>Text_Fields_To_Corrupt__c</columns>
    <columns>Number_Fields_To_Corrupt__c</columns>
    <columns>Delete_Records__c</columns>
    <columns>Modify_Records__c</columns>
    <columns>Percent_To_Corrupt__c</columns>
    <columns>Corruption_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Data Corruption Objects</label>
</ListView>